--- a/reference/Uno.Extensions.Commerce/Commerce.Droid/Commerce.Droid.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Droid/Commerce.Droid.csproj
@@ -64,17 +64,29 @@
     <DefineConstants>$(DefineConstants);WINUI</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Uno.Core.Extensions">
+      <Version>4.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.Foundation.Logging">
+      <Version>4.5.14</Version>
+    </PackageReference>
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.36" />
+    <PackageReference Include="Uno.WinUI.Lottie">
+      <Version>4.5.14</Version>
+    </PackageReference>
+    <PackageReference Include="Uno.XamlMerge.Task">
+      <Version>1.1.0-dev.12</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.AppCompat.AppCompatResources" Version="1.4.2.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-    <PackageReference Include="Uno.WinUI" Version="4.5.0-dev.562" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.0-dev.562" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.0-dev.562" />
+    <PackageReference Include="Uno.WinUI" Version="4.5.14" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0-dev.7" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0-dev.7" />
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0" />
+    <PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
     <PackageReference Include="Uno.Core" Version="4.0.1" />
-    <PackageReference Include="Uno.Material.WinUI" Version="2.3.0-dev.6" />
+    <PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.5.1" />
     <PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
   </ItemGroup>
