--- a/reference/Uno.Extensions.Commerce/Commerce.Skia.Gtk/Commerce.Skia.Gtk.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Skia.Gtk/Commerce.Skia.Gtk.csproj
@@ -16,16 +16,29 @@
 		<UpToDateCheckInput Include="..\Commerce.UI\**\*.xaml" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="HarfBuzzSharp" Version="2.8.2.3" />
+		<PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="2.8.2.3" />
+		<PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.3" />
+		<PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="2.8.2.3" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-		<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.5.0-dev.562" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.0-dev.562" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.0-dev.562" />
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0-dev.7" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0-dev.7" />
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="4.5.14" />
+		<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.5.14" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
 		<PackageReference Include="Uno.Core" Version="4.0.1" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.3.0-dev.6" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
 		<PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
+		<PackageReference Include="Uno.XamlMerge.Task" Version="1.1.0-dev.12" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Commerce\Commerce.csproj" />
