--- a/reference/Uno.Extensions.Commerce/Commerce.Skia.WPF.Host/Commerce.Skia.Wpf.Host.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Skia.WPF.Host/Commerce.Skia.Wpf.Host.csproj
@@ -6,9 +6,9 @@
 		<UseWPF>true</UseWPF>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.5.0-dev.562" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.0-dev.562" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.0-dev.562" />
+		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.5.14" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
 	</ItemGroup>
 	<ItemGroup>
 		<Content Include="Assets\Fonts\uno-fluentui-assets.ttf" />
