--- a/reference/Uno.Extensions.Commerce/Commerce.Wasm/Commerce.Wasm.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Wasm/Commerce.Wasm.csproj
@@ -78,15 +78,15 @@
 		<PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.5.0-dev.562" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.0-dev.562" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.0-dev.562" />
+		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.5.14" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.14" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.14" />
 		<PackageReference Include="Uno.Wasm.Bootstrap" Version="4.0.0-dev.174" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="4.0.0-dev.174" />
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0-dev.7" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0-dev.7" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
 		<PackageReference Include="Uno.Core" Version="4.0.1" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.3.0-dev.6" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
 		<PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
 	</ItemGroup>
 	<ItemGroup>
