--- a/reference/Uno.Extensions.Commerce/Commerce.Windows.Desktop/Commerce.Windows.Desktop.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce.Windows.Desktop/Commerce.Windows.Desktop.csproj
@@ -18,7 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.4" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
@@ -30,11 +30,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.WinUI" Version="4.5.0-dev.562" />
+		<PackageReference Include="Uno.WinUI" Version="4.5.14" />
 		<PackageReference Include="Uno.Core" Version="4.0.1" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.3.0-dev.6" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0-dev.7" />
-		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0-dev.7" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.3.0" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
+		<PackageReference Include="Uno.Toolkit.WinUI" Version="2.3.0" />
 		<PackageReference Include="Uno.SourceGenerationTasks" Version="4.1.0" />
 	</ItemGroup>
 
