--- a/reference/Uno.Extensions.Commerce/Commerce/Commerce.csproj
+++ b/reference/Uno.Extensions.Commerce/Commerce/Commerce.csproj
@@ -4,4 +4,17 @@
 	  <RootNamespace>Commerce.Shared</RootNamespace>
 	  <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Uno.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Update="Uno.Extensions.Core" Version="2.2.0" />
+    <PackageReference Update="Uno.Extensions.Hosting" Version="2.2.0" />
+    <PackageReference Update="Uno.Extensions.Http" Version="2.2.0" />
+    <PackageReference Update="Uno.Extensions.Logging.Serilog" Version="2.2.0" />
+    <PackageReference Update="Uno.Extensions.Navigation" Version="2.2.0" />
+    <PackageReference Update="Uno.Extensions.Reactive" Version="2.2.0" />
+    <PackageReference Update="Uno.Extensions.Reactive.Messaging" Version="2.2.0" />
+    <PackageReference Update="Uno.Extensions.Reactive.WinUI" Version="2.2.0" />
+    <PackageReference Update="Uno.Extensions.Serialization" Version="2.2.0" />
+  </ItemGroup>
 </Project>
