--- a/reference/Uno.Extensions.Commerce/Directory.Build.props
+++ b/reference/Uno.Extensions.Commerce/Directory.Build.props
@@ -13,24 +13,36 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(MSBuildProjectName)' == 'Commerce'">
-		<PackageReference Include="Uno.Extensions.Configuration" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Core" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Hosting" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Http" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Navigation" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Serialization" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Reactive" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.2.0-dev.118" />
+		<PackageReference Include="Uno.Extensions.Configuration" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Core" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Hosting" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Http" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Logging.Serilog" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Serialization" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Reactive" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Reactive.Messaging" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.2.0" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(IncludeWinUIExtensions)' == 'true'">
-		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.2.0-dev.118" />
-		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.2.0-dev.118" />
+	<ItemGroup Condition="'$(IncludeWinUIExtensions)' == 'true'">		
+		<PackageReference Include="Uno.Extensions" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Navigation" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Hosting.WinUI" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Localization.WinUI" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Logging.WinUI" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="2.2.0" />
+		<PackageReference Include="Uno.Extensions.Navigation.WinUI" Version="2.2.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition="$(TargetFramework.ToLower().StartsWith('xamarinmac')) and '$(Configuration)' == 'Release'">
+		<Reference Include="Xamarin.Mac">
+			<HintPath Condition="Exists('C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\Xamarin.VisualStudio')">C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\Extensions\Xamarin.VisualStudio\Xamarin.Mac.dll</HintPath>
+			<HintPath Condition="Exists('C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\Xamarin.VisualStudio')">C:\Program Files\Microsoft Visual Studio\2022\Professional\Common7\IDE\Extensions\Xamarin.VisualStudio\Xamarin.Mac.dll</HintPath>
+			<HintPath Condition="Exists('C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Xamarin.VisualStudio')">C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Xamarin.VisualStudio\Xamarin.Mac.dll</HintPath>
+			<HintPath Condition="Exists('C:\Program Files\Microsoft Visual Studio\2022\Preview\Common7\IDE\Extensions\Xamarin.VisualStudio')">C:\Program Files\Microsoft Visual Studio\2022\Preview\Common7\IDE\Extensions\Xamarin.VisualStudio\Xamarin.Mac.dll</HintPath>
+		</Reference>
 	</ItemGroup>
 
 </Project>
