--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Mobile/WCTDataTreeTabSample.Mobile.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Mobile/WCTDataTreeTabSample.Mobile.csproj
@@ -17,12 +17,16 @@
     <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-android'">21.0</SupportedOSPlatformVersion>
     <SupportedOSPlatformVersion Condition="'$(TargetFramework)'=='net6.0-macos'">10.14</SupportedOSPlatformVersion>
   </PropertyGroup>
-  <ItemGroup>
-	<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />	
-	<PackageReference Include="Uno.WinUI" Version="4.5.12" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+  <ItemGroup>		
+	
+	<PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />		
+	  
+	<PackageReference Include="Uno.Core.Extensions.Logging" Version="4.0.1" />		
+	<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />		
+	<PackageReference Include="Uno.WinUI" Version="4.6.18" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.18" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(TargetFramework)'=='net6.0-android'">
@@ -66,4 +70,5 @@
       </PropertyGroup>
     </When>
   </Choose>
+  <Import Project="..\WCTDataTreeTabSample.Shared\WCTDataTreeTabSample.Shared.projitems" Label="Shared" />
 </Project>
