--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Wpf/WCTDataTreeTabSample.Skia.Wpf.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
@@ -17,10 +17,24 @@
     </AssemblyAttribute>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.5.12" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
+	  <PackageReference Include="HarfBuzzSharp" Version="2.8.2.3" />
+	  <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="2.8.2.3" />
+	  <PackageReference Include="HarfBuzzSharp.NativeAssets.Win32" Version="2.8.2.3" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+	  <PackageReference Include="SkiaSharp" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp.NativeAssets.macOS" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp.NativeAssets.Win32" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp.Views.Desktop.Common" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp.Views.WPF" Version="2.88.3" />
+	  <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />
+	  <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.100" />
+	  <PackageReference Include="Uno.Core.Extensions.Logging" Version="4.0.1" />
+	  <PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+	  <PackageReference Include="Uno.SourceGenerationTasks" Version="4.2.0" />
+	  <PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.5.12" />
+	  <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
+	  <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\WCTDataTreeTabSample.Shared\**\*.xaml" />
@@ -28,4 +42,5 @@
   <ItemGroup>
     <Content Include="Assets\Fonts\uno-fluentui-assets.ttf" />
   </ItemGroup>
+  <Import Project="..\WCTDataTreeTabSample.Shared\WCTDataTreeTabSample.Shared.projitems" Label="Shared" />
 </Project>
