--- a/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -42,11 +42,12 @@
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material.Markup" Version="0.1.0-dev.105" />
-	</ItemGroup>
-	<ItemGroup>
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.4.0-dev.99" />
 		<PackageReference Include="Uno.WinUI" Version="4.6.18" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="0.1.0-dev.105" />
+		<PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
+		<PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
+		<PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
 	</ItemGroup>
 
 	<!-- Defining the "Msix" ProjectCapability here allows the Single-project MSIX Packaging
@@ -72,12 +73,7 @@
 		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22621.27" />
 		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22621.27" />
 	</ItemGroup>
-	<ItemGroup>
-	  <PackageReference Update="Uno.Material.WinUI" Version="2.3.0" />
-	  <PackageReference Update="Uno.Toolkit.WinUI" Version="2.3.0" />
-	  <PackageReference Update="Uno.Toolkit.WinUI.Material" Version="2.3.0" />
-	  <PackageReference Update="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.18" />
-	</ItemGroup>
+
 	<Import Project="..\Extensions.props" />
 	<Import Project="..\SimpleCalculator.UI\SimpleCalculator.UI.projitems" Label="Shared" />
 </Project>
