--- a/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -40,15 +40,14 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Uno.WinUI.Markup" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material.Markup" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
 		<PackageReference Include="Uno.Material.WinUI" />
-		<!--<PackageReference Include="Uno.Toolkit.WinUI.Material" />-->
-		<!--<PackageReference Include="Uno.Toolkit.WinUI" />-->
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" />
+		<PackageReference Include="Uno.Toolkit.WinUI" />
 		<PackageReference Include="Uno.Extensions.Authentication.WinUI" />
 		<PackageReference Include="Uno.Extensions.Hosting.WinUI" />
 		<PackageReference Include="Uno.Extensions.Localization.WinUI" />
